--- a/chatgpt-alike-(works in a black mode).css
+++ b/chatgpt-alike-(works in a black mode).css
@@ -13,7 +13,9 @@ body {
 }
 
 /* Headings 1-3*/
-body .main-editor-wrapper .cm-editor .size-header-1{]
+body .main-editor-wrapper .cm-editor .size-header-1{
+	font-size: 30px;
+    color: #;
     color: #f5f5f5;
     font-weight: 500;
     margin-top: 0px; /* Adjust margin for spacing */
@@ -23,8 +25,18 @@ body .main-editor-wrapper .cm-editor .size-header-1{]
 }
 
 
-body .main-editor-wrapper .cm-editor .size-header-2,
+body .main-editor-wrapper .cm-editor .size-header-2 {
+	font-size: 24px;
+	    color: #f5f5f5;
+    font-weight: 500;
+    margin-top: 24px; /* Adjust margin for spacing */
+    margin-bottom: 8px; /* Adjust margin for spacing */
+   font-family: -apple-system, BlinkMacSystemFont, 'Avenir Next', 'Avenir', 'Helvetica Neue', Helvetica, Ubuntu, Roboto, Noto, 'Segoe UI', Arial, sans-serif;
+
+}
+
 body .main-editor-wrapper .cm-editor .size-header-3 {
+	font-size: 20px;
     color: #f5f5f5;
     font-weight: 500;
     margin-top: 24px; /* Adjust margin for spacing */
