--- a/chatgpt-alike-(works in a black mode).css
+++ b/chatgpt-alike-(works in a black mode).css
@@ -8,12 +8,15 @@ body .main-editor-wrapper .cm-editor .cm-scroller > div {
 	   white-space: pre-wrap;
     word-break: break-word;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3); /* Add a shadow effect */
-      font-size: 1.035em;
+      font-size: 1.036em;
 }
+
 body {
     font-feature-settings: normal;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";    font-variation-settings: normal;
+    font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";  font-variation-settings: normal;
     background-color: #333;  
+    letter-spacing: 0.03em; /* Adjust as needed */
+
 }
 
 
@@ -37,7 +40,7 @@ body .main-editor-wrapper .cm-editor .size-header-1{
     margin-top: 0px; /* Adjust margin for spacing */
     margin-bottom: 0px; /* Adjust margin for spacing */
    font-family: -apple-system, BlinkMacSystemFont, 'Avenir Next', 'Avenir', 'Helvetica Neue', Helvetica, Ubuntu, Roboto, Noto, 'Segoe UI', Arial, sans-serif;
-
+    letter-spacing: 0em; /* Adjust as needed */
 }
 
 
@@ -63,16 +66,37 @@ body .main-editor-wrapper .cm-editor .size-header-3 {
 
 
 /* Headings 4-6*/
-body .main-editor-wrapper .cm-editor .size-header-4,
-body .main-editor-wrapper .cm-editor .size-header-5,
-body .main-editor-wrapper .cm-editor .size-header-6 {
+body .main-editor-wrapper .cm-editor .size-header-4{
+	font-size: 20px;
     color: #f5f5f5;
-    font-weight: 500;
-    margin-top: 8px; /* Adjust margin for spacing */
-    margin-bottom: 1px; /* Adjust margin for spacing */
+    font-weight: 400;
+    margin-top: 14px; /* Adjust margin for spacing */
+    margin-bottom: 2px; /* Adjust margin for spacing */
    font-family: -apple-system, BlinkMacSystemFont, 'Avenir Next', 'Avenir', 'Helvetica Neue', Helvetica, Ubuntu, Roboto, Noto, 'Segoe UI', Arial, sans-serif;
-
+    letter-spacing: 0em; /* Adjust as needed */
 }
+
+
+body .main-editor-wrapper .cm-editor .size-header-5 {
+	font-size: 20px;
+    color: #f5f5f5;
+    font-weight: 400;
+    margin-top: 1px; /* Adjust margin for spacing */
+    margin-bottom: 2px; /* Adjust margin for spacing */
+   font-family: -apple-system, BlinkMacSystemFont, 'Avenir Next', 'Avenir', 'Helvetica Neue', Helvetica, Ubuntu, Roboto, Noto, 'Segoe UI', Arial, sans-serif;
+    letter-spacing: 0em; /* Adjust as needed */
+}
+
+body .main-editor-wrapper .cm-editor .size-header-6 {
+	font-size: 20px;
+    color: #f5f5f5;
+    font-weight: 400;
+    margin-top: 14px; /* Adjust margin for spacing */
+    margin-bottom: 2px; /* Adjust margin for spacing */
+   font-family: -apple-system, BlinkMacSystemFont, 'Avenir Next', 'Avenir', 'Helvetica Neue', Helvetica, Ubuntu, Roboto, Noto, 'Segoe UI', Arial, sans-serif;
+    letter-spacing: 0em; /* Adjust as needed */
+}
+
 
 /* Code Blocks and Tables */
 .cm-editor .cm-table,
@@ -83,6 +107,14 @@ body .main-editor-wrapper .cm-editor .cm-code-mark {
     font-weight: bold;
 
 
+}
+
+.cm-editor .cm-strong {
+    color: #fff;
+   
+    font-family: Arial;
+     font-weight: 100px !important;
+  font-size: 1.030em;
 }
 
 /* Links */
