--- a/chatgpt-alike-(works in a black mode).css
+++ b/chatgpt-alike-(works in a black mode).css
@@ -9,15 +9,24 @@ body .main-editor-wrapper .cm-editor .cm-scroller > div {
     word-break: break-word;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3); /* Add a shadow effect */
       font-size: 1.036em;
+
 }
 
 body {
     font-feature-settings: normal;
     font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";  font-variation-settings: normal;
     background-color: #333;  
-    letter-spacing: 0.03em; /* Adjust as needed */
+    letter-spacing: 0.04em; /* Adjust as needed */
+
 
 }
+
+.cm-line[style="text-indent: -31.15625px; padding-left: 31.15625px;"] {
+  padding-top: 0.3rem;
+
+}
+
+
 
 
 /* Hide the elements with specific class names */
@@ -49,7 +58,7 @@ body .main-editor-wrapper .cm-editor .size-header-2 {
 	    color: #f5f5f5;
     font-weight: 500;
     margin-top: 24px; /* Adjust margin for spacing */
-    margin-bottom: 1px; /* Adjust margin for spacing */
+    margin-bottom: 0px; /* Adjust margin for spacing */
    font-family: -apple-system, BlinkMacSystemFont, 'Avenir Next', 'Avenir', 'Helvetica Neue', Helvetica, Ubuntu, Roboto, Noto, 'Segoe UI', Arial, sans-serif;
 
 }
@@ -64,7 +73,27 @@ body .main-editor-wrapper .cm-editor .size-header-3 {
 
 }
 
+body .main-editor-wrapper .cm-editor .cm-emphasis {
+    font-style: normal;
+    text-decoration: underline;
 
+}
+.ͼ1 .cm-lintPoint {
+    position: relative;
+    color: #fff;
+}
+
+.ͼ1 .cm-widgetBuffer {
+    height: 1em;
+    width: 0;
+    color: #fff !important;
+    background-color: #fff !important; /* Add this line to set the background to white */
+}
+
+
+.ͼ1 .cm-lintRange-warning {
+    background-image: none;   
+}
 /* Headings 4-6*/
 body .main-editor-wrapper .cm-editor .size-header-4{
 	font-size: 20px;
@@ -109,6 +138,22 @@ body .main-editor-wrapper .cm-editor .cm-code-mark {
 
 }
 
+.cm-editor .cm-gutter.cm-gutter-lint .cm-lint-marker {
+    width: 10px;
+    cursor: help;
+    margin: 0 auto;
+   display:none;
+}
+
+.ͼ1 .cm-lintPoint-warning:after {
+  display:none;
+  border-bottom-color: orange;
+}
+
+
+
+
+
 .cm-editor .cm-strong {
     color: #fff;
    
@@ -150,3 +195,4 @@ table.table-helper tr:first-child {
     font-size: 1.025em;
     font-family: Helvetica;
 }
+
